--- a/projekSiakad_CI/composer.json
+++ b/projekSiakad_CI/composer.json
@@ -11,7 +11,8 @@
     },
     "require": {
         "php": "^8.1",
-        "codeigniter4/framework": "^4.0"
+        "codeigniter4/framework": "^4.0",
+        "myth/auth": "^1.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
@@ -21,7 +22,8 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
-            "Config\\": "app/Config"
+            "Config\\": "app/Config",
+            "CodeIgniter\\": "system/"
         },
         "exclude-from-classmap": [
             "**/Database/Migrations/**"
